package it.polimi.ingsw.client.cli;

import it.polimi.ingsw.client.Client;

/**
 * This class represents the CLI.
 */
public class CLI {

    /**
     * Starts the CLI.
     */
    public static void start(){
        Client.initCLI();
    }
}
